add included and not included in ann, lots of fixes and beautifications
